<?xml version="1.0"?>
<package>
  <name>iiwa_examples</name>
  <version>1.0.0</version>
  <description>The iiwa_ros package</description>
  <author email="hongminwu0120@gmail.com">Hongmin Wu</author>
  <maintainer email="hongminwu0120@gmail.com">Hongmin Wu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>rospack</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  
</package>
